fix: update repository.url to GitHub for npm provenance validation
npm provenance verification requires package.json repository.url to
match the source repository in the sigstore attestation. Since we
publish from GitHub Actions (tinyland-inc/tinyland.dev), the URL
must point to github.com, not gitlab.com.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "author": "Tinyland.dev",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/tinyland/tinyland.dev",
+    "url": "https://github.com/tinyland-inc/tinyland.dev",
     "directory": "packages/tinyland-video-thumbnails"
   },
   "dependencies": {},
